--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,10 +16,15 @@
     "@monaco-editor/react": "^4.4.6",
     "@mui/material": "^5.11.14",
     "@radix-ui/react-select": "^1.2.1",
+    "@swc/jest": "^0.2.24",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^18.15.7",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "monaco-themes": "^0.4.4",
     "openai": "^3.2.1",
     "phosphor-react": "^1.4.1",
